# vibro

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile-cross.dockerignore  PORT_MAIN_TO_MASTER_OFFLINE.md  README.md  _.sh  flake.nix  typos.toml
.cargo/: ci-config.toml  config.toml
.cloudflare/: README.md
.cloudflare/docs-proxy/: wrangler.toml
.cloudflare/open-source-website-assets/: wrangler.toml
.config/: hakari.toml
.github/ISSUE_TEMPLATE/: 01_bug_ai.yml  02_bug_edit_predictions.yml  03_bug_git.yml  04_bug_debugger.yml  10_bug_report.yml  11_crash_report.yml
.github/workflows/: ci.yml  nix.yml  script_checks.yml
.vector/: debug.json  settings.json
assets/keymaps/: default-linux.json  default-macos.json  default-windows.json  initial.json  vim.json
assets/settings/: default.json  initial_debug_tasks.json  initial_local_settings.json  initial_server_settings.json  initial_user_settings.json
crates/ai_onboarding/: Cargo.toml
crates/auto_update/: Cargo.toml
crates/auto_update_ui/: Cargo.toml
crates/breadcrumbs/: Cargo.toml
crates/cli/: build.rs
crates/command_palette/: Cargo.toml
crates/copilot/: Cargo.toml
crates/dap/: Cargo.toml
crates/debugger_ui/: Cargo.toml
crates/diagnostics/: Cargo.toml
crates/edit_prediction_types/: Cargo.toml
crates/edit_prediction_ui/: Cargo.toml
crates/editor/: Cargo.toml
crates/extension/: Cargo.toml
crates/extension_api/: Cargo.toml  PENDING_CHANGES.md  README.md
crates/extension_api/src/: extension_api.rs  http_client.rs  process.rs  settings.rs
crates/extension_api/wit/since_v0.0.1/: extension.wit
crates/extension_api/wit/since_v0.0.4/: extension.wit
crates/extension_api/wit/since_v0.0.6/: extension.wit
crates/extension_api/wit/since_v0.1.0/: extension.wit
crates/extension_api/wit/since_v0.2.0/: extension.wit
crates/extension_api/wit/since_v0.3.0/: extension.wit  github.wit
crates/extension_api/wit/since_v0.4.0/: extension.wit
crates/extension_api/wit/since_v0.5.0/: extension.wit
crates/extension_api/wit/since_v0.6.0/: extension.wit  nodejs.wit
crates/extension_api/wit/since_v0.8.0/: extension.wit
crates/extension_cli/: Cargo.toml
crates/extension_host/: Cargo.toml
crates/extensions_ui/: Cargo.toml
crates/fs/: Cargo.toml
crates/git_ui/: Cargo.toml
crates/gpui/: Cargo.toml  README.md
crates/html_to_markdown/: Cargo.toml
crates/inline_completion/: Cargo.toml
crates/notifications/: Cargo.toml
crates/notifications/src/: notifications.rs  status_toast.rs
docs/: README.md  book.toml
extensions/: README.md
extensions/snippets/: Cargo.toml  extension.toml
extensions/snippets/src/: snippets.rs
nix/: build.nix  shell.nix
script/: build-docker  bump-vector-patch-version  bundle-linux  bundle-mac  check-licenses  crate-dep-graph  determine-release-channel  draft-release-notes  drop-test-dbs  generate-licenses  generate-licenses-csv  get-preview-channel-changes  get-pull-requests-since  get-release-notes-since  get-released-version  install-linux  install.sh  kube-shell  new-crate  prompts  run-local-minio  setup-dev-driver.ps1  snap-build  snap-try  symbolicate  trigger-release  uninstall.sh  upload-extension-cli  upload-nightly
(+587 files in other folders)
