[package]
name = "vector_extension_api"
version = "0.6.0"
description = "APIs for creating Vector extensions in Rust"
repository = "https://vector.dev"
documentation = "https://docs.rs/vector_extension_api"
keywords = ["vector", "extension"]
edition.workspace = true
# Change back to `true` when we're ready to publish v0.6.0.
publish = false
license = "Apache-2.0"

[lints]
workspace = true

[lib]
path = "src/extension_api.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen = "0.41"

[package.metadata.component]
target = { path = "wit" }
