[package]
name = "notifications"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/notifications.rs"
doctest = false

[features]
default = []
test-support = ["gpui/test-support", "workspace/test-support"]

[dependencies]
anyhow.workspace = true
channel.workspace = true
client.workspace = true
component.workspace = true
gpui.workspace = true
ui.workspace = true
workspace.workspace = true
zed_actions.workspace = true

[dev-dependencies]
client = { workspace = true, features = ["test-support"] }
collections = { workspace = true, features = ["test-support"] }
gpui = { workspace = true, features = ["test-support"] }
rpc = { workspace = true, features = ["test-support"] }
settings = { workspace = true, features = ["test-support"] }
util = { workspace = true, features = ["test-support"] }
