[package]
name = "notifications"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/notifications.rs"
doctest = false

[features]
default = []
test-support = ["gpui/test-support", "workspace/test-support"]

[dependencies]
component.workspace = true
gpui.workspace = true
ui.workspace = true
workspace.workspace = true
workspace-hack.workspace = true
