[package]
name = "notifications"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/notifications.rs"
doctest = false

[features]
default = []
test-support = ["gpui/test-support", "workspace/test-support"]

[dependencies]
anyhow.workspace = true
component.workspace = true
gpui.workspace = true
ui.workspace = true
workspace.workspace = true
vector_actions.workspace = true

[dev-dependencies]
collections = { workspace = true, features = ["test-support"] }
gpui = { workspace = true, features = ["test-support"] }
settings = { workspace = true, features = ["test-support"] }
util = { workspace = true, features = ["test-support"] }
