[package]
name = "vector_snippets"
version = "0.0.5"
edition.workspace = true
publish.workspace = true
license = "Apache-2.0"

[lints]
workspace = true

[lib]
path = "src/snippets.rs"
crate-type = ["cdylib"]

[dependencies]
vector_extension_api = { path = "../../crates/extension_api" }
serde_json = "1.0"
